--- a/src/style/pages/board.scss
+++ b/src/style/pages/board.scss
@@ -1,10 +1,9 @@
 .contentBoard {
     position: absolute;
-    right: 10px;
-    width: 800px;
-    transform: translate(0%, -50%);
-    height: 800px;
-    top: 50%;
+    height: 100%;
+    width: calc((100vh - 60px));
+    left:50%;
+    transform: translate(-50%, 0%);
     overflow: hidden;
 }
 .chessboard {
@@ -14,14 +13,13 @@
     flex-wrap: wrap;
     cursor: grab;
     div {
-        width: 100px;
-        height: 100px;
+        width: calc((100vh - 60px) / 8);
+        height: calc((100vh - 60px) / 8);
         background-size: 100%;
         background-repeat: no-repeat;
         pointer-events: visible;
         position: relative;
     }
-    border-radius: 15px;
     overflow: hidden;
 }
 
@@ -104,21 +102,16 @@
 }
 
 .menu {
-    border: 1px solid white;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 300px;
+    position: relative;
+    width: 100%;
+    height: 60px;
+    display: flex;
     background-color: black;
     text-align: center;
-    h2,h3 {
-        margin: 10px 0;
-    }
-    h2 {
-        color: goldenrod;
-    }
     h3 {
         color: green;
+        margin: auto;
+        font-size: 3vh;
     }
     button {
         margin: 10px 0;
@@ -131,9 +124,39 @@
         transition: .5s;
         bottom: 10px;
         left: 50%;
+        margin: auto;
         border-radius: 50px;
         &:hover {
             border-radius: 0;
         }
+    }
+}
+.mid {
+    width: 100%;
+    height: calc(100% - 60px);
+    position: relative;
+    left: 0;
+    top: 0;
+    display: block !important;
+}
+
+.animation {
+    background-color: rgba(0, 0, 0, 0.397);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+    h1 {
+        color: red;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translate(0,-50%);
+        text-shadow: 0 0 5px black;
+        font-size: 50px;
+        text-align: center;
+        width: 100%;
     }
 }
