--- a/src/style/pages/board.scss
+++ b/src/style/pages/board.scss
@@ -2,7 +2,7 @@
     position: absolute;
     height: 100%;
     width: calc((100vh - 60px));
-    left:50%;
+    left: 50%;
     transform: translate(-50%, 0%);
     overflow: hidden;
 }
@@ -102,16 +102,18 @@
 }
 
 .menu {
+    user-select: none;
     position: relative;
     width: 100%;
     height: 60px;
     display: flex;
-    background-color: black;
+    background-color: rgb(47, 47, 47);
     text-align: center;
     h3 {
         color: green;
         margin: auto;
         font-size: 3vh;
+        user-select: none;
     }
     button {
         margin: 10px 0;
@@ -121,7 +123,7 @@
         letter-spacing: 1px;
         font-weight: 800;
         cursor: pointer;
-        transition: .5s;
+        transition: 0.5s;
         bottom: 10px;
         left: 50%;
         margin: auto;
@@ -129,6 +131,7 @@
         &:hover {
             border-radius: 0;
         }
+        user-select: none;
     }
 }
 .mid {
@@ -153,7 +156,7 @@
         position: absolute;
         left: 0;
         top: 50%;
-        transform: translate(0,-50%);
+        transform: translate(0, -50%);
         text-shadow: 0 0 5px black;
         font-size: 50px;
         text-align: center;
