--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -11,6 +11,7 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
+    border-radius: 10px;
     cursor: grab;
     div {
         width: calc((100vh - 60px) / 8);
@@ -66,7 +67,7 @@
         height: 3vh;
         transform: translate(-50%, -50%);
         border-radius: 50%;
-        background-color: rgba(15, 15, 15, 0.547);
+        background-color: rgba(0, 0, 0, 0.63);
         box-shadow: 0 0 5px -1px rgb(255, 255, 255);
     }
     &:hover {
@@ -78,19 +79,18 @@
 
 .promotion {
     position: absolute;
-    display: block;
-    width: 100px;
-    top: 0;
-    left: -410px;
+    display: none;
+    width: calc((100%) / 8);
+    top: 0px;
+    left: 0px;
     z-index: 20;
     background-color: rgb(255, 255, 255);
     text-align: center;
     user-select: none;
     img {
-        width: 60px;
-        height: 60px;
+        width: calc(100% - 40px);
         padding: 20px;
-        background-color: rgb(0, 0, 0);
+        background-color: rgb(40, 65, 31);
         border-radius: 50%;
         cursor: pointer;
         transition: 0.5s;
@@ -107,10 +107,10 @@
     width: 100%;
     height: 60px;
     display: flex;
-    background-color: rgb(47, 47, 47);
+    background-color: black;
     text-align: center;
     h3 {
-        color: green;
+        color: rgb(70, 0, 128);
         margin: auto;
         font-size: 3vh;
         user-select: none;
@@ -123,15 +123,15 @@
         letter-spacing: 1px;
         font-weight: 800;
         cursor: pointer;
-        transition: 0.5s;
         bottom: 10px;
         left: 50%;
         margin: auto;
-        border-radius: 50px;
-        &:hover {
-            border-radius: 0;
-        }
+        border-radius: 5px;
         user-select: none;
+        &:hover {
+            background-color: black;
+            color: white;
+        }
     }
 }
 .mid {
@@ -151,14 +151,15 @@
     left: 0;
     top: 0;
     display: none;
+    user-select: none;
     h1 {
-        color: red;
+        color: rgb(70, 0, 128);
         position: absolute;
         left: 0;
         top: 50%;
         transform: translate(0, -50%);
         text-shadow: 0 0 5px black;
-        font-size: 50px;
+        font-size: 80px;
         text-align: center;
         width: 100%;
     }
