--- a/src/style/initialization.scss
+++ b/src/style/initialization.scss
@@ -12,7 +12,7 @@ body {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
-    background:rgb(20, 20, 20);
+    background:black;
 }
 
 canvas {
