--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,7 +1,7 @@
 .contentBoard {
     position: absolute;
-    height: 100%;
-    width: calc((100vh - 100px));
+    height: calc((100vh - 50px));
+    width: calc((100vh - 150px));
     left: 50%;
     transform: translate(-50%, 0%);
     overflow: hidden;
@@ -14,8 +14,8 @@
     border-radius: 10px;
     cursor: grab;
     div {
-        width: calc((100vh - 100px) / 8);
-        height: calc((100vh - 100px) / 8);
+        width: calc((100vh - 150px) / 8);
+        height: calc((100vh - 150px) / 8);
         background-size: 100%;
         background-repeat: no-repeat;
         pointer-events: visible;
@@ -27,8 +27,8 @@
 .cursor {
     position: absolute;
     border-radius: 50%;
-    width: 110px;
-    height: 110px;
+    width: calc((100vh - 150px) / 8);
+    height: calc((100vh - 150px) / 8);
     display: none;
     transform: translate(-50%, -50%);
     left: 50px;
@@ -162,5 +162,33 @@
         font-size: 80px;
         text-align: center;
         width: 100%;
+    }
+}
+
+.param {
+    position: absolute;
+    background-color: rgb(27, 27, 27);
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+    overflow: hidden;
+    right: 10px;
+    top: 10px;
+    svg {
+        width: 50px;
+        cursor: pointer;
+        transition: .2s;
+        &:hover {
+            background-color: white;
+            stroke: black;
+        }
+        path {
+            user-select: none;
+            pointer-events: none;
+        }
+    }
+    input {
+        height: 30px;
+        width: 50px;
     }
 }
